--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p id="line12">Happy birthday, brother, may your stars always shine! 🎉</p>
         </div>
         <div class="image">
-            <img src="wepik-export-20240303100304Woe0.png" alt="">
+            <img src="robot.png" alt="">
         </div>
     </div>
 </div>
